--- a/flask_app/templates/authors.html
+++ b/flask_app/templates/authors.html
@@ -11,6 +11,24 @@
     <title>Authors</title>
 </head>
 <body>
-    <h2>Authors</h2>
+    <div class="d-flex justify-content-around">
+        <form action="/create/author" method="post" class="col-4 bg-dark p-4 my-5">
+            <h2 class="text-center text-primary">New Author</h2>
+            <div class="form-group">
+                <label class="label" for="name">Name:</label>
+                <input type="text" name="name" class="form-control">
+            </div>
+            <input type="submit" value="Create" class="btn btn-primary btn-outline-dark mt-2">
+        </form>
+        <div class="col-4 bg-dark text-light text-center my-5 p-4">
+            <h2 class="text-primary">All Authors</h2>
+            {% for one_author in all_authors %}
+            <p>
+                <a href="/author/{{one_author.id}}" class="text-warning">{{one_author.name}}</a>
+            </p>
+            {% endfor %}
+        </div>
+    </div>
+    <a href="#" class="text-center mx-auto">Add Book</a>
 </body>
 </html>
