finished books page/routes/queries

--- a/flask_app/templates/authors.html
+++ b/flask_app/templates/authors.html
@@ -29,6 +29,6 @@
             {% endfor %}
         </div>
     </div>
-    <a href="/create/book" class="add_book_link">Add Book</a>
+    <a href="/books" class="add_book_link">Add Book</a>
 </body>
 </html>
