--- a/flask_app/templates/books_show.html
+++ b/flask_app/templates/books_show.html
@@ -11,6 +11,27 @@
     <title>Books Show</title>
 </head>
 <body>
-    
+    <div class="d-flex justify-content-around flex-wrap">
+        <div class="col-6">
+            <h2 class="text-center">Title: {{book.title}}</h2>
+            <p>Favorited by:</p>
+            {% for author in book.authors_who_favorited %}
+                <p>{{author.name}}</p>
+            {% endfor %}
+        </div>
+        <form action="/join/author" method="POST" class="col-6">
+            <h2 class="text-info">Add Book's Favorite</h2>
+            <input type="hidden" name="book_id" value="{{book.id}}">
+            <div class="form-group">
+                <label for="author_id">Book:</label>
+                <select name="author_id" class="form-control">
+                    {% for author in unfavorited_authors %}
+                        <option value="{{author.id}}">{{author.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <input type="submit" value="Add Book" class="btn btn-primary">
+        </form>
+    </div>
 </body>
 </html>
