--- a/flask_app/templates/show_authors.html
+++ b/flask_app/templates/show_authors.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Books Show</title>
+    <title>Author Show</title>
 </head>
 <body>
     <div class="d-flex justify-content-around flex-wrap">
@@ -32,6 +32,6 @@
             </div>
             <input type="submit" value="Add Book" class="btn btn-primary">
         </form>
-    </div>
+        <a href="/">Home</a>
 </body>
 </html>
