fixed show_books route/ working on css

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -22,3 +22,14 @@
     color: gold;
     font-size: larger;
 }
+
+/* show_books HTML */
+.book_label {
+    font-size: larger;
+    margin-bottom: 5px;
+}
+
+.fav_by {
+    font-size: larger;
+    margin-left: 10px;
+}
