working on show_authors html

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -33,3 +33,13 @@
     font-size: larger;
     margin-left: 10px;
 }
+
+.author_option {
+    margin-left: 10px;
+}
+
+.home_link {
+    margin-right: 1400px;
+    font-size: larger;
+    text-decoration: none;
+}
