--- a/flask_app/templates/show_authors.html
+++ b/flask_app/templates/show_authors.html
@@ -14,20 +14,32 @@
     <!-- This page needs work -->
     <div class="d-flex justify-content-around flex-wrap">
         <div class="col-6">
-            <h2 class="text-center">Title: {{book.title}}</h2>
-            <p>Favorited by:</p>
-            {% for author in author.books_who_favorited %}
-                <p>{{book.title}}</p>
-            {% endfor %}
+            <h2 class="text-center">'s favorites </h2>
+            <table>
+                <thead class="table table-info">
+                    <tr>
+                        <th>Title</th>
+                        <th>Number of pages</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for book in  %}
+                    <tr>
+                        <td>{{book.title}}</td>
+                        <td>{{book.num_of_pages}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
         <form action="/join/book" method="POST" class="col-6">
             <h2 class="text-info">Add Author's Favorite</h2>
-            <input type="hidden" name="book_id" value="{{book.id}}">
+            <input type="hidden" name="book_id" value="">
             <div class="form-group">
                 <label for="book_id">Author:</label>
                 <select name="book_id" class="form-control">
                     {% for author in unfavorited_authors %}
-                        <option value="{{book.id}}">{{book.title}}</option>
+                        <option value=""></option>
                     {% endfor %}
                 </select>
             </div>
