--- a/flask_app/templates/show_authors.html
+++ b/flask_app/templates/show_authors.html
@@ -25,8 +25,8 @@
                 <tbody>
                     {% for book in favorite_books %}
                     <tr>
-                        <td>{{books.title}}</td>
-                        <td>{{books.num_of_pages}}</td>
+                        <td>{{book.title}}</td>
+                        <td>{{book.num_of_pages}}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -39,7 +39,7 @@
                 <label class="author_label" for="book_id">Author:</label>
                 <select name="book_id" class="form-control">
                     {% for book in favorite_books %}
-                        <option value="{{books.id}}">{{books.title}}</option>
+                    <option value="{{book.id}}">{{books.title}}</option>
                     {% endfor %}
                 </select>
             </div>
