--- a/flask_app/templates/show_authors.html
+++ b/flask_app/templates/show_authors.html
@@ -14,8 +14,8 @@
     <!-- This page needs work -->
     <div class="d-flex justify-content-around flex-wrap">
         <div class="col-5">
-            <h2 class="text-center">{{author.name}}'s favorites </h2>
-            <table class="table table-info">
+            <h2 class="text-center text-info bg-dark mt-4">{{author.name}}'s favorites </h2>
+            <table class="table table-dark table-striped table-bordered table-hover">
                 <thead>
                     <tr>
                         <th>Title</th>
@@ -32,7 +32,7 @@
                 </tbody>
             </table>
         </div>
-        <form action="/join/book" method="POST" class="col-6">
+        <form action="/join/book" method="POST" class="col-6 p-4 bg-dark text-light mt-4">
             <h2 class="text-info">Add Author's Favorite</h2>
             <input type="hidden" name="author_id" value="{{author.id}}">
             <div class="form-group">
