--- a/flask_app/templates/show_authors.html
+++ b/flask_app/templates/show_authors.html
@@ -25,7 +25,7 @@
                 <tbody>
                     {% for book in favorite_books %}
                     <tr>
-                        <td>{{book.title}}</td>
+                        <td>{{book.id}}</td>
                         <td>{{book.num_of_pages}}</td>
                     </tr>
                     {% endfor %}
@@ -33,8 +33,8 @@
             </table>
         </div>
         <form action="/join/book" method="POST" class="col-6 p-4 bg-dark text-light mt-4">
-            <h2 class="text-info">Add Author's Favorite</h2>
             <input type="hidden" name="author_id" value="{{author.id}}">
+            <h2 class="text-info">Add Author's Favorite</h2>
             <div class="form-group">
                 <label class="author_label" for="book_id">Book:</label>
                 <select name="book_id" class="form-control">
