--- a/flask_app/templates/show_authors.html
+++ b/flask_app/templates/show_authors.html
@@ -23,9 +23,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for book in favorite_books %}
+                    {% for book in author.favorite_books %}
                     <tr>
-                        <td>{{book.id}}</td>
+                        <td>{{book.title}}</td>
                         <td>{{book.num_of_pages}}</td>
                     </tr>
                     {% endfor %}
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <label class="author_label" for="book_id">Book:</label>
                 <select name="book_id" class="form-control">
-                    {% for book in favorite_books %}
+                    {% for book in unfavorited_books %}
                         <option value="{{book.id}}">{{book.title}}</option>
                     {% endfor %}
                 </select>
